fix styling for scroll button on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -410,7 +410,7 @@ a[class*="hover-text-"]:hover, #social-icons a:hover {
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 15px;
+    /* padding: 15px; */
     border-radius: 100%;
     font-size: 30px;
     color: rgb(228, 104, 145);
